--- a/examples/PoC/launcherclient/build.gradle
+++ b/examples/PoC/launcherclient/build.gradle
@@ -12,7 +12,7 @@ android {
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
         consumerProguardFiles "consumer-rules.pro"
     }
 
@@ -29,9 +29,9 @@ android {
 }
 
 dependencies {
-    api 'com.android.support:appcompat-v7:28.0.0'
+    api 'androidx.appcompat:appcompat:1.0.0'
     testImplementation 'junit:junit:4.+'
-    androidTestImplementation("com.android.support.test.espresso:espresso-core:3.0.2", {
+    androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0', {
         exclude group: "com.android.support", module: "support-annotations"
     })
 
